--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,6 +95,21 @@
                         </div>
                     </div>
 
+                    <!-- Image Analysis Section -->
+                    <div class="download-section">
+                        <h4>Phân tích ảnh biểu đồ</h4>
+                        <div class="download-buttons">
+                            <button class="download-btn" id="checkStatusBtn">
+                                <i class="fas fa-info-circle"></i>
+                                Kiểm tra trạng thái
+                            </button>
+                            <button class="download-btn" id="analyzeImagesBtn">
+                                <i class="fas fa-brain"></i>
+                                Phân tích ảnh
+                            </button>
+                        </div>
+                    </div>
+
                     <!-- Download Results -->
                     <div class="download-section">
                         <h4>Tải kết quả</h4>
